# ScotTraffic-Server

./: .gitignore  Makefile  README.md  stack.yaml
etc/: static-carparks.json  url-cameras.json
etc/apns-certs/: README
etc/systemd/: scottraffic-webserver.service
src/: crontab.txt
src/ScotTraffic/: ScotTraffic.cabal  etc
src/ScotTraffic/Database/: Bridges.hs  Incidents.hs  Notifications.hs  SafetyCameras.hs  ScotTraffic.hs  TrafficCameras.hs  Utils.hs  Weather.hs
src/ScotTraffic/Geodetics/: LatLon.hs  OSGridRef.hs
src/ScotTraffic/Types/: BridgeStatus.hs  Incident.hs  SafetyCamera.hs  TrafficCamera.hs  Weather.hs
src/ScotTraffic/Utils/: AtomicFile.hs  CSV.hs  HTTP.hs  RoadName.hs  WebScraping.hs
src/TrafficScotland/: TrafficScotland.cabal  TrafficScotland.hs
src/UpdateTools/BridgeTool/: BridgeTool.cabal  Main.hs  Notify.hs
src/UpdateTools/BridgeTool/Bridges/: Forth.hs  Tay.hs
src/UpdateTools/IncidentsTool/: IncidentsTool.cabal  Main.hs  RSSParser.hs
src/UpdateTools/SafetyCameraTool/: Main.hs  SafetyCameraTool.cabal  Scraper.hs
src/UpdateTools/TrafficCameraTool/: Highland.hs  Main.hs  Static.hs  TrafficCameraTool.cabal
src/UpdateTools/WeatherTool/: Main.hs  WeatherTool.cabal
src/UpdateTools/WeatherTool/MetOffice/: DataPoint.hs
src/UpdateTools/WebContentTool/: Bridges.hs  Incidents.hs  Main.hs  SafetyCameras.hs  TrafficCameras.hs  Weather.hs  WebContentTool.cabal  WebImages.hs
src/WebServer/: WebServer.cabal
src/WebServer/src/: Main.hs
support/: copy-to-server.sh  support.freeway
test/: verify_server.py
