name:                ScotTraffic
version:             0.1.0.0
synopsis:            ScotTraffic common types and database access
author:              Neil Gall
maintainer:          neilgall@mac.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Database.Bridges,
                       Database.Incidents,
                       Database.Notifications,
                       Database.SafetyCameras,
                       Database.ScotTraffic,
                       Database.TrafficCameras,
                       Database.Utils,
                       Database.Weather,
                       Geodetics.LatLon,
                       Geodetics.OSGridRef,
                       Types.BridgeStatus,
                       Types.Incident,
                       Types.SafetyCamera,
                       Types.TrafficCamera,
                       Types.Weather,
                       Utils.AtomicFile,
                       Utils.CSV,
                       Utils.HTTP,
                       Utils.RoadName,
                       Utils.WebScraping
  
  build-depends:       base              >= 4.9    && < 4.10,
                       bytestring        >= 0.10   && < 0.11,
                       directory         >= 1.2    && < 1.3,
                       either            >= 4.4    && < 4.5,
                       filepath          >= 1.4    && < 1.5,
                       HTTP              >= 4000.0 && < 4001.0,
                       hxt               >= 9.3    && < 9.4,
                       hxt-curl          >= 9.1    && < 9.2,
                       mtl               >= 2.2    && < 2.3,
                       network-uri       >= 2.6    && < 2.7,
                       postgresql-simple >= 0.5    && < 0.6,
                       text              >= 1.2    && < 1.3,
                       time              >= 1.6    && < 1.7,
                       transformers      >= 0.5    && < 0.6,
                       uri               >= 0.1    && < 0.2
  
  default-language:    Haskell2010
 