Name:                WebServer
Version:             0.1
Synopsis:            ScotTraffic WebServer
Description:         ScotTraffic WebServer
License:             AllRightsReserved
Author:              Neil Gall
Maintainer:          neilgall@mac.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable WebServer
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4.9   && < 4.10,
    bytestring                >= 0.9.1 && < 0.11,
    mtl                       >= 2     && < 3,
    snap-core                 >= 1.0   && < 2.0,
    snap-server               >= 1.0   && < 2.0,
    string-conversions        >= 0.4   && < 0.5,
    transformers              >= 0.5   && < 0.6,
    ScotTraffic               >= 0.1   && < 0.2

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
